--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,19 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import Example from "../components/Example.vue";
+
+const items = [
+	{
+		id: "1",
+	},
+	{
+		id: "2",
+	},
+	{
+		id: "abc",
+	},
+];
 ---
 
 <Layout title="Welcome to Astro.">
@@ -35,8 +48,10 @@ import Card from '../components/Card.astro';
 		</svg>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			To get started, open the directory <code>src/pages</code> in your
+			project.<br />
+			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro"
+			message above.
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
@@ -60,6 +75,10 @@ import Card from '../components/Card.astro';
 				body="Come say hi to our amazing Discord community. ❤️"
 			/>
 		</ul>
+
+		<Example items={items}>
+			{items.map(({ id }) => <p slot={id}>{id}</p>)}
+		</Example>
 	</main>
 </Layout>
 
@@ -99,7 +118,10 @@ import Card from '../components/Card.astro';
 	.instructions {
 		margin-bottom: 2rem;
 		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
+		background: linear-gradient(
+			rgba(var(--accent-dark), 66%),
+			rgba(var(--accent-dark), 33%)
+		);
 		padding: 1.5rem;
 		border-radius: 8px;
 	}
