--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,10 +3,7 @@ import type { LayoutProps } from './Layout.types'
 
 type Props = LayoutProps;
 
-const { title, context } = Astro.props;
-const { foo, bar } = context;
-
-console.log(foo, bar)
+const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -20,35 +17,7 @@ console.log(foo, bar)
 		<title>{title}</title>
 	</head>
 	<body>
+		<h1>{title}</h1>
 		<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
